--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Script to clean CloudFormation templates",
   "main": "index.js",
   "scripts": {
-    "download-schemas": "node scripts/download-cloudformation-schema.js"
+    "download-schemas": "node scripts/download-cloudformation-schema.js",
+    "validate-schemas": "node scripts/validate-schema.js"
   },
   "dependencies": {
     "ajv": "^8.12.0",
