--- a/tests/fixtures/stack-one-yaml.yml
+++ b/tests/fixtures/stack-one-yaml.yml
@@ -18,6 +18,7 @@ Metadata:
           - >-
             Resource::arn:<AWS::Partition>:kms:<AWS::Region>:<AWS::AccountId>:key/*
 Resources:
+  # has comment
   ExampleSpaBucketB0F9E86E:
     Type: 'AWS::S3::Bucket'
     Properties:
